History:

<see Git checking messages for history>

8.0.1   2023/xx/xx
      - tests: fix test_entry_point() with multiple monitors having the same resolution

8.0.0   2023/04/09
      - removed support for Python 3.6
      - removed support for Python 3.7
      - MSS: fixed PEP 484 prohibits implicit Optional
      - MSS: the whole source code was migrated to PEP 570 (Python positional-only parameters)
      - Linux: reset the X server error handler on exit to prevent issues with Tk/Tkinter (fixes #220)
      - Linux: refactored how internal handles are stored to fix issues with multiple X servers (fixes #210)
      - Linux: removed side effects when leaving the context manager, resources are all freed (fixes #210)
      - Linux: added mouse support (related to #55)
      - CLI: added --with-cursor argument
      - tests: added PyPy 3.9, removed tox, and improved GNU/Linux coverage

7.0.1   2022/10/27
      - fixed the wheel package

7.0.0   2022/10/27
      - added support for Python 3.11
      - added support for Python 3.10
      - removed support for Python 3.5
      - MSS: modernized the code base (types, f-string, ran isort & black) (close #101)
      - MSS: fixed several Sourcery issues
      - MSS: fixed typos here, and there
      - doc: fixed an error when building the documentation

6.1.0   2020/10/31
      - MSS: reworked how C functions are initialised
      - Mac: reduce the number of function calls
      - Mac: support macOS Big Sur (fixes #178)
      - tests: expand Python versions to 3.9 and 3.10
      - tests: fix macOS intepreter not found on Travis-CI
      - tests: fix test_entry_point() when there are several monitors

6.0.0   2020/06/30
      - removed usage of deprecated "license_file" option for "license_files"
      - fixed flake8 usage in pre-commit
      - the module is now available on conda (closes #170)
      - MSS: the implementation is now thread-safe on all OSes (fixes #169)