@@ -3,6 +3,7 @@ History:
 <see Git checking messages for history>
 
 8.0.1   2023/xx/xx
+      - CLI: do not raise a ScreenShotError when -q, or --quiet, is used but return 1
       - tests: fix test_entry_point() with multiple monitors having the same resolution
 
 8.0.0   2023/04/09
